# shards

./: .clang-format  .continueignore  .dir-locals.el  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .projectile  404.html  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  bootstrap  build-win.sh  build-win32.sh  build.sh  codecov.yml  deep-ui.edn  format  format.sh  index.html  meson.build  run-samples.sh  run_tests  rust.version  sitemap.xml  spatial.todo.md  style_overrides.css  update.bat  update.sh  wire_viewer.edn
rust/: CMakeLists.txt  Cargo.toml  README.md  build.rs  rustfmt.toml
rust/.cargo/: config.toml
rust/clj-stub/: Cargo.toml
rust/docker/: Dockerfile  run_linux.sh
rust/src/: block.rs  chainblocksc.rs  core.rs  lib.rs  shard.rs  shardsc.rs  sync.rs  types.rs
shards/cli/: CMakeLists.txt  main.cpp
shards/core/: CMakeLists.txt  assert.hpp  async.cpp  async.hpp  brancher.hpp  capturing_brancher.hpp  compress-strings.edn  core_inlined.cpp  coro.cpp  coro.hpp  em_proxy.cpp  em_proxy.hpp  exposed_type_utils.hpp  foundation.hpp  function.hpp  hash.cpp  hash.hpp  hash.inl  hasherxxh3.hpp  inline.hpp  interface.cpp  interface.hpp  into_wire.hpp  module.hpp  number_types.cpp  object_type.hpp  object_var_util.hpp  ops_internal.cpp  ops_internal.hpp  params.hpp  pch.cpp  platform.hpp  pool.hpp  ref_output_pool.hpp  runtime.cpp  runtime.hpp  self_macro.h  serialization.hpp  shards_macros.hpp  shared.hpp  (+15 more)
shards/egui/: CMakeLists.txt  Cargo.toml  build.rs  context.hpp  egui_types.hpp  input.hpp  renderer.hpp  rust_interop.hpp
shards/fast_string/: CMakeLists.txt  fast_string.hpp  fmt.hpp  storage.cpp  storage.hpp
shards/gfx/: CMakeLists.txt  bounds.hpp  buffer.cpp  buffer.hpp  callback.hpp  callback2.hpp  checked_stack.hpp  compute.hpp  context.cpp  context.hpp  context_data.cpp  context_data.hpp  context_data_storage.hpp  culling.cpp  debug_visualize.hpp  drawable.cpp  drawable.hpp  drawable_processor.hpp  drawable_processor_helpers.hpp  dynamic_wgpu_buffer.hpp  enums.cpp  enums.hpp  error_utils.hpp  feature.cpp  feature.hpp  feature_generator.hpp  filesystem.hpp  fmt.hpp  frame_queue.hpp  fwd.hpp  geom.cpp  geom.hpp  gfx.natvis  gfx_events.js  gfx_events_em.cpp  gfx_events_em.hpp  gfx_wgpu.cpp  gfx_wgpu.hpp  gfx_wgpu.js  gfx_wgpu_pipeline_helper.hpp  (+74 more)
shards/input/: CMakeLists.txt  clipboard.cpp  clipboard.hpp  cursor_map.hpp  debug.hpp  detached.hpp  emscripten_browser_clipboard.h  event_buffer.hpp  event_decoder.cpp  event_decoder.hpp  events.hpp  gestures.cpp  gestures.hpp  input.cpp  input.hpp  input_stack.hpp  log.hpp  master.cpp  master.hpp  messages.hpp  sdl.hpp  state.hpp  test.edn  test.frag  test.wgsl  types.hpp  window_input.hpp  window_mapping.cpp
shards/lang/: .gitignore  CMakeLists.txt  Cargo.toml  bindings.h  build.rs
shards/langffi/: CMakeLists.txt  Cargo.toml  build.rs
shards/log/: CMakeLists.txt  log.cpp  log.hpp
shards/mal/: CMakeLists.txt  Core.cpp  Debug.h  Environment.h  Reader.cpp  RefCountedPtr.h  SHCore.cpp  Types.h  stepA_mal.cpp
shards/rust/: CMakeLists.txt  Cargo.toml  README.md  build.rs
shards/rust_macro/: CMakeLists.txt  Cargo.toml
shards/tests/: .gitattributes  .gitignore  CMakeLists.txt  PyShard1.py  PyShard2.py  audio.edn  audio.shs  audio2.shs  audio3.shs  bigint.clj  bigint.shs  branch.edn  branch.shs  brotli.clj  brotli.shs  bug1.shs  builtins.shs  candle.shs  capture-logs.shs  casting-numbers.shs  cbperf.clj  cbperf.shs  channels.edn  channels.shs  complex-deserialize.shs  const-vars.edn  const-vars.shs  continuations.clj  continuations.shs  crash.clj  crash.shs  crdts.shs  crypto.edn  crypto.shs  db.edn  db.shs  demo.shs  do-wire.shs  edn.shs  egui-demo.edn  (+180 more)
shards/union/: CMakeLists.txt  inlined_prelude.cpp
src/core/: CMakeLists.txt  async.cpp  async.hpp  blocks_macros.hpp  blockwrapper.hpp  brancher.hpp  cbccstrings.hpp  chainblocks.cpp  chainblocks.h  chainblocks.hpp  compress-strings.clj  compress-strings.edn  core.hpp  coro.cpp  coro.hpp  exposed_type_utils.hpp  foundation.hpp  load_balancing_pool.hpp  number_types.cpp  object_var_scope.hpp  object_var_util.hpp  ops.hpp  ops_internal.cpp  ops_internal.hpp  params.hpp  pch.cpp  runtime.cpp  runtime.hpp  runtime_inlined.cpp  runtime_macros.hpp  shards_macros.hpp  shccstrings.hpp  stbpp.hpp  time.hpp  tracking.cpp  tracking.hpp  untracked_collections.hpp  utility.hpp  variables.hpp
src/extra/: CMakeLists.txt  audio.cpp  audio.mm  bgfx.cpp  bgfx.hpp  bgfx.mm  bgfx.shaderc.cpp  bgfx.shaderc.js  bgfx_tests.cpp  brotli.cpp  clipboard.cpp  desktop.capture.win.hpp  desktop.hpp  desktop.win.cpp  dsp.cpp  gfx.cpp  gfx.hpp  gizmo.cpp  gizmo.hpp  gltf.cpp  gltf_tests.cpp  gui.cpp  gui.hpp  imgui.cpp  imgui.hpp  inputs.cpp  inputs.hpp  pch.cpp  runtime.cpp  rust_interop.cpp  rust_interop.hpp  snappy.cpp  sprite.cpp  sprite.hpp  xr.cpp
src/gfx/: .clang-format  .editorconfig  CMakeLists.txt  async.cpp  async.hpp  cache_data.hpp  capture.cpp  capture.hpp  checked_stack.hpp  context.cpp  context.hpp  context_data.cpp  context_data.hpp  context_direct.hpp  context_internal.hpp  context_openxr.hpp  context_xr_gfx.hpp  context_xr_gfx_data.hpp  drawable.cpp  drawable.hpp  drawable_processor.hpp  drawable_processor_helpers.hpp  dynamic_wgpu_buffer.hpp  enums.cpp  enums.hpp  env_probe.cpp  env_probe.hpp  environment.hpp  error_utils.hpp  feature.cpp  feature.hpp  feature_generate_context.hpp  feature_generated.hpp  feature_generator.hpp  feature_pipeline.cpp  feature_pipeline.hpp  field_types.def  fields.cpp  fields.hpp  filesystem.hpp  (+108 more)
src/input/: CMakeLists.txt  input.cpp  input.hpp  input_stack.cpp  input_stack.hpp  window_mapping.cpp  window_mapping.hpp
src/mal/: CBCore.cpp  CBGenerator.cpp  CMakeLists.txt  Core.cpp  Debug.h  Environment.cpp  Environment.h  MAL.h  README.md  ReadLine.cpp  ReadLine.h  Reader.cpp  RefCountedPtr.h  SHCore.cpp  SHLisp.h  StaticList.h  String.cpp  String.h  Types.cpp  Types.h  Validation.cpp  Validation.h  stepA_mal.cpp
src/tools/: CMakeLists.txt
src/virtual_ui/: CMakeLists.txt  context.cpp  (+3 more)
(+4688 files in other folders)
